--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PIXELIUM X | Digital Services</title>
+
+    <!-- Social Media Preview (Open Graph) -->
+    <meta property="og:title" content="PIXELIUM X | Servicios Digitales Premium">
+    <meta property="og:description"
+        content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más con garantía y soporte rápido.">
+    <meta property="og:image" content="https://pixeliumx-store.com/logo.png">
+    <meta property="og:url" content="https://pixeliumx-store.com/">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
