logo optimizado para whatsapp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="PIXELIUM X | Servicios Digitales Premium">
     <meta property="og:description"
         content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más con garantía y soporte rápido.">
-    <meta property="og:image" content="https://pixeliumx-store.com/logo.png">
+    <meta property="og:image" content="https://pixeliumx-store.com/logo_social.png">
     <meta property="og:url" content="https://pixeliumx-store.com/">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="logo.png">
