Emergency Fix: Restore broken buttons and force cache update

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=fixed_buttons_v2"></script>
 </body>
 
 </html>
