Fix mobile black screen: Use standard HTTPS API for WhatsApp

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v3_debug"></script>
+    <script src="script.js?v=v5_mobile_fix"></script>
 </body>
 
 </html>
