--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v7_final"></script>
+    <script src="script.js?v=v8_trace"></script>
 </body>
 
 </html>
