--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v9_direct"></script>
+    <script src="script.js?v=v10_final"></script>
 </body>
 
 </html>
