V12: Fix Timeout (90s) & Remove Debug Alerts

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v11_optimized"></script>
+    <script src="script.js?v=v12_final"></script>
 </body>
 
 </html>
