V13: FINAL CLEANUP - Removed all debug alerts

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v12_final"></script>
+    <script src="script.js?v=v13_clean"></script>
 </body>
 
 </html>
