V14: Mobile Hero Layout Fix (Responsive Text)

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v13_clean"></script>
+    <script src="script.js?v=v14_mobile_hero"></script>
 </body>
 
 </html>
