--- a/index.html
+++ b/index.html
@@ -34,31 +34,6 @@
         <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#products">Productos</a></li>
-            <li><a href="#about">Nosotros</a></li>
-            <li id="admin-btn-container" style="display: none;">
-                <button id="btn-admin" class="btn-admin">👑 Admin</button>
-            </li>
-            <li id="stock-admin-btn-container" style="display: none;">
-                <button id="btn-stock-admin" class="btn-admin" style="border-color: #39ff14; color: #39ff14;">📦
-                    Stock</button>
-            </li>
-            <li id="products-admin-btn-container" style="display: none;">
-                <button id="btn-products-admin" class="btn-admin" style="border-color: #ff00ff; color: #ff00ff;">🛠️
-                    Productos</button>
-            </li>
-            <li id="prices-admin-btn-container" style="display: none;">
-                <button id="btn-prices-admin" class="btn-admin" style="border-color: #ff9900; color: #ff9900;">💲
-                    Precios</button>
-            </li>
-            <li><a href="#" id="cart-btn" class="cart-link">🛒 <span id="cart-count">0</span></a></li>
-            <li id="auth-buttons">
-                <button class="btn-login" onclick="openAuthModal('login')">Ingresar</button>
-                <button class="btn-register" onclick="openAuthModal('register')">Registro</button>
             </li>
             <li id="user-info" style="display: none;">
                 <div class="profile-container">
@@ -69,7 +44,7 @@
                     <button class="btn-logout" id="logout-btn">Salir</button>
                 </div>
             </li>
-        </ul>
+            </ul>
     </nav>
 
     <section id="home" class="hero">
@@ -469,7 +444,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v14_mobile_hero"></script>
+    <script src="script.js?v=v15_mobile_menu"></script>
 </body>
 
 </html>
