--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Orbitron:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=v24_forced">
+    <link rel="stylesheet" href="style.css?v=v25_fix_capcut">
 </head>
 
 <body>
@@ -219,14 +219,14 @@
                 </div>
                 <h3>CapCut Pro</h3>
                 <p>Edición de video profesional.</p>
-                <div class="stock-status stock-out">Sin Stock</div>
+                <div id="stock-capcut" class="stock-status stock-out">Sin Stock</div>
                 <p class="gold-text">⚡ Entrega inmediata</p>
                 <div class="warranty-info">
                     <i class="fas fa-star warranty-star"></i>
                     <span>30 Días de Garantía</span>
                 </div>
                 <div class="price-tag">S/15.00</div>
-                <button class="btn-add" disabled>Agotado</button>
+                <button class="btn-add" onclick="addToCart('CapCut Pro', 15)">Agotado</button>
             </div>
         </div>
     </section>
