V26: Fixed CapCut Pro Stock Update Logic

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v16_unified"></script>
+    <script src="script.js?v=v26_stock_fix"></script>
 </body>
 
 </html>
