Added optimized favicons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta property="og:image" content="https://pixeliumx-store.com/logo_social.png">
     <meta property="og:url" content="https://pixeliumx-store.com/">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/png" href="logo_social.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
