Added favicon.ico for search compatibility

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://pixeliumx-store.com/logo_social.png">
     <meta property="og:url" content="https://pixeliumx-store.com/">
     <meta property="og:type" content="website">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
