V27: Fixed CapCut stock button state

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                     <span>30 Días de Garantía</span>
                 </div>
                 <div class="price-tag">S/15.00</div>
-                <button class="btn-add" onclick="addToCart('CapCut Pro', 15)">Agotado</button>
+                <button id="btn-capcut" class="btn-add" onclick="addToCart('CapCut Pro', 15)">Agregar al
+                    Carrito</button>
             </div>
         </div>
     </section>
@@ -476,7 +477,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v26_stock_fix"></script>
+    <script src="script.js?v=v27_btn_fix"></script>
 </body>
 
 </html>
