V28: Fixed dynamic stock buttons for all core products

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                         <span>12 Meses de Garantía</span>
                     </div>
                     <p class="trust-badge">🏅✨ Primero te activo la cuenta, después pagas ✨🎖️</p>
-                    <button class="btn-add" onclick="addToCart('Canva PRO (Personal)', 15)">Agregar al Carrito</button>
+                    <button id="btn-canva" class="btn-add" onclick="addToCart('Canva PRO (Personal)', 15)">Agregar al
+                        Carrito</button>
                 </div>
             </div>
 
@@ -143,7 +144,8 @@
                         <span>24 Meses de Garantía</span>
                     </div>
                     <div class="price-tag">S/69.00 <span class="price-alt">($18.00)</span></div>
-                    <button class="btn-add" onclick="addToCart('Panel Canva PRO', 69)">Agregar al Carrito</button>
+                    <button id="btn-panel" class="btn-add" onclick="addToCart('Panel Canva PRO', 69)">Agregar al
+                        Carrito</button>
 
                     <div class="activation-steps">
                         <p><strong>Pasos de activación 😎✨</strong></p>
@@ -172,7 +174,8 @@
                     <span>10 Meses de Garantía</span>
                 </div>
                 <div class="price-tag">S/29.00 <span class="price-alt">($9.00)</span></div>
-                <button class="btn-add" onclick="addToCart('Perplexity AI - GPT5', 29)">Agregar al Carrito</button>
+                <button id="btn-perplexity" class="btn-add" onclick="addToCart('Perplexity AI - GPT5', 29)">Agregar al
+                    Carrito</button>
             </div>
 
             <!-- Gemini -->
@@ -192,7 +195,8 @@
                     <span>10 Meses de Garantía</span>
                 </div>
                 <div class="price-tag">S/30.00</div>
-                <button class="btn-add" onclick="addToCart('Gemini Advanced', 30)">Agregar al Carrito</button>
+                <button id="btn-gemini" class="btn-add" onclick="addToCart('Gemini Advanced', 30)">Agregar al
+                    Carrito</button>
             </div>
 
             <!-- Google One -->
@@ -212,7 +216,8 @@
                     <span>10 Meses de Garantía</span>
                 </div>
                 <div class="price-tag">S/30.00</div>
-                <button class="btn-add" onclick="addToCart('Google One', 30)">Agregar al Carrito</button>
+                <button id="btn-google" class="btn-add" onclick="addToCart('Google One', 30)">Agregar al
+                    Carrito</button>
             </div>
 
             <!-- CapCut -->
@@ -477,7 +482,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v27_btn_fix"></script>
+    <script src="script.js?v=v28_all_buttons"></script>
 </body>
 
 </html>
