V29: Removed dangerous stock auto-reset logic

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v28_all_buttons"></script>
+    <script src="script.js?v=v29_no_reset"></script>
 </body>
 
 </html>
