Updated social preview to 600x600 jpg (under 300KB)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="PIXELIUM X | Servicios Digitales Premium">
     <meta property="og:description"
         content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más con garantía y soporte rápido.">
-    <meta property="og:image" content="https://pixeliumx-store.com/icon-192.png">
+    <meta property="og:image" content="https://pixeliumx-store.com/social_preview.jpg?v=2">
     <meta property="og:url" content="https://pixeliumx-store.com/">
     <meta property="og:type" content="website">
     <link rel="shortcut icon" href="favicon.ico">
