V30: Updated payment name for privacy

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
                 <!-- Yape Form -->
                 <div id="yape-form" class="payment-form">
-                    <p class="instruction-text">1. Yapea al (Luis Quintana).</p>
+                    <p class="instruction-text">1. Yapea al (Lui* Qui*).</p>
                     <img src="yapeqr.png" alt="Yape QR"
                         style="width: 120px; border-radius: 8px; margin-bottom: 10px; display: block; margin-left: auto; margin-right: auto;">
                     <p class="instruction-text">2. Sube la captura del comprobante.</p>
@@ -482,7 +482,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v29_no_reset"></script>
+    <script src="script.js?v=v30_privacy_fix"></script>
 </body>
 
 </html>
