V31: Added explicit OG dimensions and Twitter cards for WhatsApp

--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <meta property="og:title" content="PIXELIUM X | Servicios Digitales Premium">
     <meta property="og:description"
         content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más con garantía y soporte rápido.">
-    <meta property="og:image" content="https://pixeliumx-store.com/social_preview.jpg?v=2">
+    <meta property="og:image" content="https://pixeliumx-store.com/social_preview.jpg?v=30_fix">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:url" content="https://pixeliumx-store.com/">
     <meta property="og:type" content="website">
+
+    <!-- Twitter Preview -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PIXELIUM X | Servicios Digitales Premium">
+    <meta name="twitter:description" content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más.">
+    <meta name="twitter:image" content="https://pixeliumx-store.com/social_preview.jpg?v=30_fix">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
