V31: Fixed stock decrement logic for custom products

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v30_privacy_fix"></script>
+    <script src="script.js?v=v31_decrement_fix"></script>
 </body>
 
 </html>
