V33: Final stock fix - fixed missing declaration and exact matching

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v31_decrement_fix"></script>
+    <script src="script.js?v=v33_stock_absolute_fix"></script>
 </body>
 
 </html>
