V34: Universal stock fix - unified UI refresh system

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                         <li>✨ 1 año por <strong>S/15 soles</strong> (1 persona)</li>
                     </ul>
                     <p class="feature-note">✅ Todas las funciones Pro desbloqueadas</p>
-                    <div id="stock-canva" class="stock-status stock-available">Stock: 400</div>
+                    <div id="stock-canva" class="stock-status stock-available" data-stock-key="canva-pro">Stock: 400
+                    </div>
                     <p class="gold-text">✨ A tu propio correo</p>
                     <p class="gold-text">⚡ Entrega inmediata</p>
                     <p class="activation-note">📝 Agrega tu correo donde quieres que se te active al momento de hacer la
@@ -143,7 +144,8 @@
                         <li>✅ Quitas y agregas usuarios</li>
                         <li>⚡ Activación inmediata + garantía</li>
                     </ul>
-                    <div id="stock-panel" class="stock-status stock-available">Stock: 50</div>
+                    <div id="stock-panel" class="stock-status stock-available" data-stock-key="panel-canva">Stock: 50
+                    </div>
                     <p class="gold-text">✨ A tu propio correo</p>
                     <p class="gold-text">⚡ Entrega inmediata</p>
                     <p class="activation-note">📝 Agrega tu correo donde quieres que se te active al momento de hacer la
@@ -175,7 +177,8 @@
                 </div>
                 <h3>Perplexity AI - GPT5</h3>
                 <p>Búsqueda inteligente y respuestas precisas.</p>
-                <div id="stock-perplexity" class="stock-status stock-available">Stock: 8</div>
+                <div id="stock-perplexity" class="stock-status stock-available" data-stock-key="perplexity">Stock: 8
+                </div>
                 <p class="gold-text">⚡ Entrega inmediata</p>
                 <p class="activation-note">🔑 Se te entrega ID y contraseña al instante.</p>
                 <div class="warranty-info">
@@ -194,7 +197,7 @@
                 </div>
                 <h3>Gemini Advanced</h3>
                 <p>12 meses con todos los beneficios.</p>
-                <div id="stock-gemini" class="stock-status stock-available">Stock: 24</div>
+                <div id="stock-gemini" class="stock-status stock-available" data-stock-key="gemini">Stock: 24</div>
                 <p class="gold-text">✨ A tu propio correo</p>
                 <p class="gold-text">⚡ Entrega inmediata</p>
                 <p class="activation-note">📝 Agrega tu correo donde quieres que se te active al momento de hacer la
@@ -215,7 +218,7 @@
                 </div>
                 <h3>Google One</h3>
                 <p>Almacenamiento ampliado y beneficios premium.</p>
-                <div id="stock-google" class="stock-status stock-available">Stock: 21</div>
+                <div id="stock-google" class="stock-status stock-available" data-stock-key="google-one">Stock: 21</div>
                 <p class="gold-text">✨ A tu propio correo</p>
                 <p class="gold-text">⚡ Entrega inmediata</p>
                 <p class="activation-note">📝 Agrega tu correo donde quieres que se te active al momento de hacer la
@@ -236,7 +239,7 @@
                 </div>
                 <h3>CapCut Pro</h3>
                 <p>Edición de video profesional.</p>
-                <div id="stock-capcut" class="stock-status stock-out">Sin Stock</div>
+                <div id="stock-capcut" class="stock-status stock-out" data-stock-key="capcut">Sin Stock</div>
                 <p class="gold-text">⚡ Entrega inmediata</p>
                 <div class="warranty-info">
                     <i class="fas fa-star warranty-star"></i>
@@ -491,7 +494,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v33_stock_absolute_fix"></script>
+    <script src="script.js?v=v34_universal_stock_fix"></script>
 </body>
 
 </html>
