--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=v35_space_resilient_stock"></script>
+    <script src="pixelium.js?v=v37_fuzzy_match"></script>
 </body>
 
 </html>
