V38: Added auto-repair system to backfill missing stock DB keys on load

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
     </div>
 
-    <script src="pixelium.js?v=v37_fuzzy_match"></script>
+    <script src="pixelium.js?v=v38_auto_repair"></script>
 </body>
 
 </html>
