Optimized heavy images (CapCut, Gemini, etc) and added cache busting to HTML

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <!-- Canva Special Offer -->
             <div class="card special-card">
                 <div class="card-icon">
-                    <img src="canva.png" alt="Canva Logo" class="product-img">
+                    <img src="canva.png?v=opt" alt="Canva Logo" class="product-img">
                 </div>
                 <h3>Canva PRO</h3>
                 <div class="card-content">
@@ -133,7 +133,7 @@
             <!-- Panel Canva PRO -->
             <div class="card special-card-alt">
                 <div class="card-icon">
-                    <img src="panel-canva.png" alt="Panel Canva Logo" class="product-img">
+                    <img src="panel-canva.png?v=opt" alt="Panel Canva Logo" class="product-img">
                 </div>
                 <h3>Panel Canva PRO</h3>
                 <div class="card-content">
@@ -173,7 +173,7 @@
             <!-- Perplexity -->
             <div class="card">
                 <div class="card-icon">
-                    <img src="perplexity.png" alt="Perplexity Logo" class="product-img">
+                    <img src="perplexity.png?v=opt" alt="Perplexity Logo" class="product-img">
                 </div>
                 <h3>Perplexity AI - GPT5</h3>
                 <p>Búsqueda inteligente y respuestas precisas.</p>
@@ -193,7 +193,7 @@
             <!-- Gemini -->
             <div class="card">
                 <div class="card-icon">
-                    <img src="gemini.png" alt="Gemini Logo" class="product-img">
+                    <img src="gemini.png?v=opt" alt="Gemini Logo" class="product-img">
                 </div>
                 <h3>Gemini Advanced</h3>
                 <p>12 meses con todos los beneficios.</p>
@@ -214,7 +214,7 @@
             <!-- Google One -->
             <div class="card">
                 <div class="card-icon">
-                    <img src="google-one.png" alt="Google One Logo" class="product-img">
+                    <img src="google-one.png?v=opt" alt="Google One Logo" class="product-img">
                 </div>
                 <h3>Google One</h3>
                 <p>Almacenamiento ampliado y beneficios premium.</p>
@@ -235,7 +235,7 @@
             <!-- CapCut -->
             <div class="card">
                 <div class="card-icon">
-                    <img src="capcut.png?v=new" alt="CapCut Logo" class="product-img">
+                    <img src="capcut.png?v=opt" alt="CapCut Logo" class="product-img">
                 </div>
                 <h3>CapCut Pro</h3>
                 <p>Edición de video profesional.</p>
