Added dedicated About Us section with stats and neon styling

--- a/index.html
+++ b/index.html
@@ -252,6 +252,37 @@
         </div>
     </section>
 
+    <section id="about" class="about-section">
+        <h2 class="section-title">Nosotros</h2>
+        <div class="about-content">
+            <p>
+                En <strong>Pixelium X</strong>, lideramos la revolución digital brindándote acceso premium a las
+                herramientas más potentes del mercado.
+                Nuestra misión es empoderar a creativos, estudiantes y profesionales con tecnología de punta a precios
+                accesibles.
+            </p>
+            <p>
+                Nos diferenciamos por nuestra <strong>velocidad de entrega automática</strong>, soporte técnico dedicado
+                y garantía total en cada suscripción.
+                Tu seguridad y satisfacción son nuestro código fuente.
+            </p>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <span class="stat-number">+5k</span>
+                    <span class="stat-label">Clientes Felices</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">24/7</span>
+                    <span class="stat-label">Soporte Activo</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">100%</span>
+                    <span class="stat-label">Garantía</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Auth Modal -->
     <div id="auth-modal" class="modal">
         <div class="modal-content auth-content">
