Updated About Us text and SEO meta descriptions with user provided content

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>PIXELIUM X | Digital Services</title>
 
     <!-- Social Media Preview (Open Graph) -->
+    <meta name="description"
+        content="En Pixelium X somos una tienda digital creada para ayudarte a acceder de forma sencilla a herramientas premium que potencian tu productividad y tu creatividad.">
     <meta property="og:title" content="PIXELIUM X | Servicios Digitales Premium">
     <meta property="og:description"
-        content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más con garantía y soporte rápido.">
+        content="En Pixelium X somos una tienda digital creada para ayudarte a acceder de forma sencilla a herramientas premium que potencian tu productividad y tu creatividad.">
     <meta property="og:image" content="https://pixeliumx-store.com/social_preview.jpg?v=30_fix">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
@@ -20,7 +22,8 @@
     <!-- Twitter Preview -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PIXELIUM X | Servicios Digitales Premium">
-    <meta name="twitter:description" content="Tu tienda de servicios digitales. Cuentas streaming, licencias y más.">
+    <meta name="twitter:description"
+        content="En Pixelium X somos una tienda digital creada para ayudarte a acceder de forma sencilla a herramientas premium que potencian tu productividad y tu creatividad.">
     <meta name="twitter:image" content="https://pixeliumx-store.com/social_preview.jpg?v=30_fix">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
@@ -256,15 +259,20 @@
         <h2 class="section-title">Nosotros</h2>
         <div class="about-content">
             <p>
-                En <strong>Pixelium X</strong>, lideramos la revolución digital brindándote acceso premium a las
-                herramientas más potentes del mercado.
-                Nuestra misión es empoderar a creativos, estudiantes y profesionales con tecnología de punta a precios
-                accesibles.
+                En <strong>Pixelium X</strong> somos una tienda digital creada para ayudarte a acceder de forma sencilla
+                a herramientas premium que potencian tu productividad y tu creatividad. Nacimos pensando en creadores de
+                contenido, estudiantes y personas que necesitan soluciones digitales confiables para diseñar, editar,
+                almacenar y trabajar con tecnología de IA sin complicarse.
             </p>
             <p>
-                Nos diferenciamos por nuestra <strong>velocidad de entrega automática</strong>, soporte técnico dedicado
-                y garantía total en cada suscripción.
-                Tu seguridad y satisfacción son nuestro código fuente.
+                Ofrecemos productos digitales y accesos a servicios en la nube mediante modalidades multiusuario o
+                licencias compartidas, con un catálogo que incluye herramientas populares para diseño, edición de video,
+                almacenamiento y suscripciones de inteligencia artificial. Además, también contamos con modalidades
+                privadas para quienes buscan un acceso exclusivo y una experiencia más personalizada.
+            </p>
+            <p>
+                Nuestro compromiso es darte una experiencia rápida, clara y accesible, con precios sin competencia para
+                que puedas impulsar tus proyectos con las herramientas que el mercado utiliza hoy, sin pagar de más.
             </p>
             <div class="stats-grid">
                 <div class="stat-item">
